--- a/error.html
+++ b/error.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body>
-    <img width="100%" src="/ClassicErrorScreen.png">
-    <audio src="/ClassicError.wav" autoplay hidden>
+    <img width="100%" src="./ClassicErrorScreen.png">
+    <audio src="./ClassicError.wav" autoplay hidden>
   </body>
 </html>
