--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@ div.content{clear:both;margin:0;position:relative;width:1016px;float:left}div.ma
 <div id="headertopnavmenu" class="globalnav">
 <ul id="top_nav" class="header_block">
 <li class="top_nav_item explore">
-<a href="/error.html">Explore</a>
+<a href="./error.html">Explore</a>
 <ul class="top_nav_submenu">
 <li class="first">
-<div class="arrow"></div><a href="/error.html">Animations</a>
+<div class="arrow"></div><a href="./error.html">Animations</a>
 </li>
-<li><a href="/error.html">Community</a></li>
-<li><a href="/error.html">Contests</a></li>
+<li><a href="./error.html">Community</a></li>
+<li><a href="./error.html">Contests</a></li>
 </ul>
 </li>
 <li class="top_nav_item shop">
-<a href="/error.html">Shop</a>
+<a href="./error.html">Shop</a>
 </li>
 <li class="top_nav_item search">
 <script>
@@ -108,19 +108,19 @@ div.content{clear:both;margin:0;position:relative;width:1016px;float:left}div.ma
             }
           }
         </script>
-<a href="javascript:;" onclick="doSearch()">
+<a href="javascript:;" href="./error.html">
 <div id="top_nav_search_icon" title="Search"></div>
 </a>
 <input type="text" id="searchbar" value="" placeholder="Search query">
 </li>
 <li class="top_nav_item create">
-<a href="/error.html">Create</a>
+<a href="./error.html">Create</a>
 </li>
 </ul>
 <div id="header_links" class="header_block">
-<a id="header_discord_login" href="/error.html">Discord Sign-in</a> -
-<a href="/error.html">Sign Up</a> -
-<a href="/error.html">Login</a>
+<a id="header_discord_login" href="./error.html">Discord Sign-in</a> -
+<a href="./error.html">Sign Up</a> -
+<a href="./error.html">Login</a>
 </div>
 <!--[if lte IE 6]>
 <script type="text/javascript">
@@ -187,30 +187,30 @@ jQuery('.money').bind('mouseout', function(e) {
 <div class="tabcontainer clearfix">
 <ul>
 <li>
-<div id="sptab" class="tabinactive" href="/error.html">
+<div id="sptab" class="tabinactive" href="./error.html">
 <div id="sptabtextholder" class="tabc">
-<a id="sptablink" href="/error.html">STAFF PICKS</a>
+<a id="sptablink" href="./error.html">STAFF PICKS</a>
 </div>
 </div>
 </li>
 <li>
 <div id="mrtab" class="tabinactive" onclick="switchTheTabLol('mrtab');">
 <div id="mrtabtextholder" class="tabc">
-<a id="mrtablink" href="/error.html">MOST SHARED</a>
+<a id="mrtablink" href="./error.html">MOST SHARED</a>
 </div>
 </div>
 </li>
 <li>
-<div id="mptab" class="tabinactive" href="/error.html">
+<div id="mptab" class="tabinactive" href="./error.html">
 <div id="mptabtextholder" class="tabc">
-<a id="mptablink" href="/error.html">TOP ANIMATIONS</a>
+<a id="mptablink" href="./error.html">TOP ANIMATIONS</a>
 </div>
 </div>
 </li>
 <li>
-<div id="mvtab" class="tabinactive" href="/error.html">
+<div id="mvtab" class="tabinactive" href="./error.html">
 <div id="mvtabtextholder" class="tabc">
-<a id="mvtablink" href="/error.html">MOST WATCHED</a>
+<a id="mvtablink" href="./error.html">MOST WATCHED</a>
 </div>
 </div>
 </li>
@@ -231,11 +231,11 @@ jQuery('.money').bind('mouseout', function(e) {
 <h1 id="endscreenowner"></h1>
 </div>
 <div class="endscreenbuttons">
-<a href="/error.html" id="replaybutton">
+<a href="./error.html" id="replaybutton">
 <div class="endscreenbutton"></div>
 <div class="buttontext">Replay</div>
 </a>
-<a href="/error.html" id="sharebutton">
+<a href="./error.html" id="sharebutton">
 <div class="endscreenbutton" style="background-color: #fe6704;"></div>
 <div class="buttontext">Share</div>
 </a>
@@ -285,23 +285,23 @@ This content requires the Macromedia Flash Player. <a href="/error.html">Get Fla
 <div class="footernav clearfix">
 <div class="footer_block">
 <div class="footer_block_text" style="font-weight:bold;font-size:16px;">About FlashThemes</div>
-<div class="footer_block_text"><a href="/error.html">Who we are</a></div>
-<div class="footer_block_text"><a href="/error.html">Twitter</a></div>
-<div class="footer_block_text"><a href="/error.html">Contests</a></div>
+<div class="footer_block_text"><a href="./error.html">Who we are</a></div>
+<div class="footer_block_text"><a href="./error.html">Twitter</a></div>
+<div class="footer_block_text"><a href="./error.html">Contests</a></div>
 </div>
 <div class="footer_block" style="border-right:none;">
 <div class="footer_block_text" style="font-weight:bold;font-size:16px;">Usage Guidelines</div>
-<div class="footer_block_text"><a href="/error.html">Terms of Use</a></div>
-<div class="footer_block_text"><a href="/error.html">Legal Notices</a></div>
-<div class="footer_block_text"><a href="/error.html">Privacy Policy</a></div>
+<div class="footer_block_text"><a href="./error.html">Terms of Use</a></div>
+<div class="footer_block_text"><a href="./error.html">Legal Notices</a></div>
+<div class="footer_block_text"><a href="./error.html">Privacy Policy</a></div>
 </div>
 <div class="footer_right_block">
 <div class="right_mid">
 <div class="footer_right_block_text" style="font-weight:bold;font-size:16px;">Getting Help</div>
-<div class="footer_right_block_text"><a href="/error.html">Tutorial</a></div>
-<div class="footer_right_block_text"><a href="/error.html">Help Videos</a></div>
-<div class="footer_right_block_text"><a href="/error.html">FAQs</a></div>
-<div class="footer_right_block_text"><a href="/error.html">Discord</a></div>
+<div class="footer_right_block_text"><a href="./error.html">Tutorial</a></div>
+<div class="footer_right_block_text"><a href="./error.html">Help Videos</a></div>
+<div class="footer_right_block_text"><a href="./error.html">FAQs</a></div>
+<div class="footer_right_block_text"><a href="./error.html">Discord</a></div>
 </div>
 </div>
 </div>
