--- a/error.html
+++ b/error.html
@@ -1,6 +1,6 @@
 <html>
   <head></head>
-  <body>
+  <body style="background-color: #000; margin: 0;">
     <img width="100%" src="./ClassicErrorScreen.png">
     <audio src="./ClassicError.wav" autoplay hidden>
   </body>
