--- a/error.html
+++ b/error.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
   <body style="background-color: #000; margin: 0;">
-    <img width="100%" src="./ClassicErrorScreen.png">
+    <img height="100%" src="./ClassicErrorScreen.png">
     <audio src="./ClassicError.wav" autoplay hidden>
   </body>
 </html>
