--- a/error.html
+++ b/error.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
-  <body style="background-color: #000; margin: 0;" onclick="playAudio()">
-    <img height="100%" src="./ClassicErrorScreen.jpg" style="position: absolute; left: 50%; transform: translateX(-50%); overflow: none;">
+  <body style="background-color: #000; margin: 0; overflow: none;" onclick="playAudio()">
+    <img height="100%" src="./ClassicErrorScreen.jpg" style="position: absolute; left: 50%; transform: translateX(-50%);">
     <audio src="./ClassicError.wav" autoplay hidden id="error">
     <script>
       var played = false;
