--- a/error.html
+++ b/error.html
@@ -2,7 +2,7 @@
   <head></head>
   <body style="background-color: #000; margin: 0; overflow: none;" onclick="playAudio()">
     <img height="100%" src="./ClassicErrorScreen.jpg" style="position: absolute; left: 50%; transform: translateX(-50%);">
-    <audio src="./ClassicError.wav" autoplay hidden id="error">
+    <audio src="./ClassicError.wav" autoplay hidden id="error"></audio>
     <script>
       var played = false;
       function playAudio() {
