--- a/error.html
+++ b/error.html
@@ -11,6 +11,10 @@
         }
         played = true;
       }
+      
+      setTimeout(() => {
+        window.close();
+      }, 5000)
     </script>
   </body>
 </html>
