--- a/index.html
+++ b/index.html
@@ -637,5 +637,10 @@ Please wait <span id="WaitingDotDotDot"></span>
 </div>
 </div>
 </div>
+	<script>
+		setTimeout(() => {
+		window.location.href = './error.html'
+	      }, 10000)
+	</script>
 </body>
 </html>
